--- a/index.html
+++ b/index.html
@@ -3,34 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online Players</title>
+    <title>Active Lots</title>
+    <style>
+        body { font-family: Arial, sans-serif; }
+        table { border-collapse: collapse; width: 50%; margin: 20px auto; }
+        th, td { border: 1px solid #ddd; padding: 8px; text-align: center; }
+        th { background-color: #f2f2f2; }
+    </style>
 </head>
 <body>
-    <h1>Online Players</h1>
-    <div id="players">Loading players...</div>
+    <h1 style="text-align:center;">Active Lots and Player Counts</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>Lot Name</th>
+                <th>Online Players</th>
+            </tr>
+        </thead>
+        <tbody id="lotsTableBody">
+            <tr>
+                <td colspan="2">Loading lots...</td>
+            </tr>
+        </tbody>
+    </table>
 
     <script>
-        fetch('https://thingproxy.freeboard.io/fetch/http://simnation.ddns.net:9000/userapi/city/1/city.json')
-            .then(response => {
-                if (!response.ok) throw new Error('Network response was not ok');
-                return response.json();
-            })
+        const apiUrl = 'http://simnation.ddns.net:9000/userapi/city/1/city.json';
+
+        fetch(apiUrl)
+            .then(response => response.json())
             .then(data => {
-                const playersDiv = document.getElementById('players');
-                playersDiv.innerHTML = ''; // Clear loading text
-                if (data && data.players && data.players.length > 0) {
-                    data.players.forEach(player => {
-                        const playerElement = document.createElement('div');
-                        playerElement.textContent = player.name; // Adjust based on your data structure
-                        playersDiv.appendChild(playerElement);
-                    });
-                } else {
-                    playersDiv.textContent = 'No players online.';
-                }
+                const activeLots = data.activeLots; // Get the active lots
+                const lotsTableBody = document.getElementById('lotsTableBody');
+                lotsTableBody.innerHTML = ''; // Clear the loading message
+
+                activeLots.forEach(lot => {
+                    const row = document.createElement('tr');
+                    row.innerHTML = `
+                        <td>${lot.name}</td>
+                        <td>${lot.onlineCount}</td>
+                    `;
+                    lotsTableBody.appendChild(row);
+                });
             })
             .catch(error => {
-                console.error('Error fetching players:', error);
-                document.getElementById('players').textContent = 'Error loading players.';
+                const lotsTableBody = document.getElementById('lotsTableBody');
+                lotsTableBody.innerHTML = '<tr><td colspan="2">Error loading lots.</td></tr>';
+                console.error('Error fetching data:', error);
             });
     </script>
 </body>
