--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script>
         async function loadLots() {
             try {
-                const response = await fetch('http://simnation.ddns.net:9000/userapi/city/1/city.json');
+                const response = await fetch('https://cors-anywhere.herokuapp.com/http://simnation.ddns.net:9000/userapi/city/1/city.json');
                 const data = await response.json();
 
                 // Get active lots and their corresponding counts
