--- a/index.html
+++ b/index.html
@@ -4,6 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Active Lots</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            color: #333;
+            margin: 0;
+            padding: 20px;
+        }
+
+        h1 {
+            text-align: center;
+            color: #0056b3;
+        }
+
+        #lots {
+            margin-top: 20px;
+            padding: 10px;
+            background: white;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .lot {
+            padding: 10px;
+            border-bottom: 1px solid #eee;
+        }
+
+        .lot:last-child {
+            border-bottom: none;
+        }
+    </style>
     <script>
         async function loadLots() {
             try {
@@ -13,27 +44,18 @@
                 // Parse the actual data from the response
                 const jsonData = JSON.parse(data.contents);
 
-                // Create a mapping of lot IDs to names
-                const lotMapping = {};
-                for (let i = 0; i < jsonData.reservedLots.length; i++) {
-                    lotMapping[jsonData.reservedLots[i]] = jsonData.names[i];
-                }
-
                 // Get active lots and their corresponding counts
-                const activeLots = jsonData.activeLots; // Changed to use active lots
-                const onlineCounts = jsonData.onlineCount; // Corresponding counts
+                const activeLots = jsonData.reservedLots;
+                const onlineCounts = jsonData.onlineCount;
 
                 // Displaying the active lots and their player counts
                 const lotsContainer = document.getElementById('lots');
                 lotsContainer.innerHTML = ''; // Clear previous content
 
                 for (let i = 0; i < activeLots.length; i++) {
-                    const lotID = activeLots[i];
-                    const lotName = lotMapping[lotID]; // Retrieve the lot name using the lot ID
-                    const count = onlineCounts[i]; // Corresponding player count
-
-                    if (count > 0) { // Only display if there's at least one player
-                        lotsContainer.innerHTML += `<p>${lotName} (ID: ${lotID}): ${count} player(s)</p>`;
+                    if (onlineCounts[i] > 0) { // Only display if there's at least one player
+                        const lotName = jsonData.names[jsonData.reservedLots.indexOf(activeLots[i])];
+                        lotsContainer.innerHTML += `<div class="lot">${lotName}: ${onlineCounts[i]} sim(s) inside</div>`;
                     }
                 }
             } catch (error) {
