--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Active Lots</title>
+    <title>SimNation - Active Lots</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -117,7 +117,7 @@
     </script>
 </head>
 <body>
-    <h1>Active Lots and Players</h1>
+    <h1>SimNation - Active Lots and Players</h1>
     <div id="lots">Loading lots...</div>
 </body>
 </html>
