--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
     </script>
 </head>
 <body>
-    <h1>SimNation Dashboard</h1>
+    <h1>SimNation Dashboard v1.0</h1>
     <div id="tempoSim">Loading time...</div>
     <div id="main-container">
         <div class="container">
