--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     }
 
     @media (max-width: 768px) {
-        #main-container {
+        #main-container, #bottom-container {
             flex-direction: column;
         }
         .container {
