--- a/index.html
+++ b/index.html
@@ -95,10 +95,12 @@
     display: none;
 }
 
-    .preserve-whitespace {
+    .description-container {
+        max-width: 260px; 
+        word-wrap: break-word; 
         white-space: pre-wrap; 
     }
-
+        
     @media (max-width: 768px) {
     #main-container, #bottom-container {  
         flex-direction: column;
@@ -400,7 +402,7 @@ async function loadOnlinePlayers() {
             </div>
             <img src="https://images.weserv.nl/?url=simnationserver.com:9000/userapi/city/1/${lotId}.png" alt="${lotData.name}" style="width: 200px; height: 200px; border-radius: 8px; border: 3px solid #ff7518; display: block; margin: 10px auto;">
             <p><strong>Description:</strong></p>
-        <div class="preserve-whitespace">${formattedDescription}</div>
+            <div class="description-container">${formattedDescription}</div>
             <p><strong>Lot Type:</strong> ${categoryMapping[lotData.category] || 'Unknown'}</p>
             <p><strong>Owner:</strong> ${ownerName || 'Unknown'}</p>
             <p><strong>Roommates:</strong> ${roommateNames.length > 0 ? roommateNames.join(', ') : 'None'}</p>
@@ -450,7 +452,7 @@ async function displayPlayerInfo(avatarId) {
                 ${playerData.name}
             </div>
             <p><strong>Description:</strong></p>
-        <div class="preserve-whitespace">${formattedDescription}</div>
+            <div class="description-container">${formattedDescription}</div>
             <p><strong>Age:</strong> ${ageInDays} days old</p>
             <p><strong>Location:</strong> ${playerLocation}</p>
         `;
